@@ -1,4 +1,7 @@
 1.7.12+svn:
+ * AI:
+   * Port [protect_leader], [protect_unit], [protect_location] to new-style ai
+     config, which is a goal with name=protect, which accepts a SLF [criteria].
  * Engine:
    * Fix bug #15146: made kill event with animate="yes" recheck the presence of
      unit before animating, fixing the assertion failure (in case the unit is
